--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.8.0",
+    "react-helmet": "^5.2.0",
     "reset-css": "^4.0.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
